@startuml
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam monochrome true

title Sudoku Coursework Class Diagram

interface SudokuModel {
  +{static} SIZE: int
  +addObserver(observer: Observer)
  +deleteObserver(observer: Observer)
  +loadPuzzles(puzzleFilePath: Path)
  +newGame()
  +reset()
  +setCellValue(row: int, col: int, value: int): boolean
  +clearCell(row: int, col: int): boolean
  +undoLastAction(): boolean
  +requestHint(): Hint
  +getInvalidCells(): List<CellPosition>
  +isBoardCompleted(): boolean
  +getCellValue(row: int, col: int): int
  +isEditableCell(row: int, col: int): boolean
  +getBoardCopy(): int[][]
  +isValidationFeedbackEnabled(): boolean
  +setValidationFeedbackEnabled(enabled: boolean)
  +isHintEnabled(): boolean
  +setHintEnabled(enabled: boolean)
  +isRandomPuzzleSelectionEnabled(): boolean
  +setRandomPuzzleSelectionEnabled(enabled: boolean)
  +getFixedPuzzleIndex(): int
  +setFixedPuzzleIndex(index: int)
  +getPuzzleCount(): int
  +hasUndoableAction(): boolean
  +hasEditableEmptyCell(): boolean
}

class Model {
  +{static} SIZE: int
  -{static} BOX_SIZE: int
  -random: Random
  -puzzlePool: List<int[][]>
  -validationFeedbackEnabled: boolean
  -hintEnabled: boolean
  -randomPuzzleSelectionEnabled: boolean
  -fixedPuzzleIndex: int
  -initialBoard: int[][]
  -currentBoard: int[][]
  -solvedBoard: int[][]
  -fixedCells: boolean[][]
  -lastMove: Move
  +Model(puzzleFilePath: String)
  +Model(puzzleFilePath: Path)
}

enum "SudokuModel.ChangeType" as ChangeType {
  NEW_GAME
  RESET
  CELL_UPDATED
  UNDO
  FLAGS_UPDATED
}

class "SudokuModel.CellPosition" as CellPosition {
  -row: int
  -col: int
  +CellPosition(row: int, col: int)
  +getRow(): int
  +getCol(): int
  +equals(other: Object): boolean
  +hashCode(): int
}

class "SudokuModel.Hint" as Hint {
  -row: int
  -col: int
  -value: int
  +Hint(row: int, col: int, value: int)
  +getRow(): int
  +getCol(): int
  +getValue(): int
}

class "Model.Move" as Move {
  -row: int
  -col: int
  -previousValue: int
  -newValue: int
}

class SudokuController {
  -model: SudokuModel
  -view: SudokuView
  -completionShown: boolean
  +SudokuController(model: SudokuModel, view: SudokuView)
}

class SudokuView {
  -model: SudokuModel
  -controller: SudokuController
  -cellButtons: JButton[][]
  -invalidCells: Set<CellPosition>
  -numberPadButtons: JButton[]
  -eraseButton: JButton
  -undoButton: JButton
  -hintButton: JButton
  -validationCheckBox: JCheckBox
  -hintCheckBox: JCheckBox
  -randomCheckBox: JCheckBox
  -fixedPuzzleSpinner: JSpinner
  -fixedPuzzleLabel: JLabel
  -statusLabel: JLabel
  -selectionLabel: JLabel
  -selectedRow: int
  -selectedCol: int
  -syncingFlagControls: boolean
  -syncingFixedPuzzleControl: boolean
  +SudokuView(model: SudokuModel)
  +update(o: Observable, arg: Object)
}

class SudokuGuiMain {
  +main(args: String[])
}

class SudokuCli {
  -model: SudokuModel
  -scanner: Scanner
  -completionShown: boolean
  +main(args: String[])
}

class Observable
class Observer
class JFrame

Model ..|> SudokuModel
Model --|> Observable
SudokuView ..|> Observer
SudokuView --|> JFrame

SudokuModel +-- ChangeType
SudokuModel +-- CellPosition
SudokuModel +-- Hint
Model "1" *-- "0..1" Move

SudokuController "1" --> "1" SudokuModel : calls model operations
SudokuController "1" --> "1" SudokuView : updates view state
SudokuView "1" --> "1" SudokuController : forwards UI input
SudokuView "1" --> "1" SudokuModel : reads board state

SudokuGuiMain ..> "1" Model : instantiate concrete model
SudokuGuiMain ..> "1" SudokuView : instantiate
SudokuGuiMain ..> "1" SudokuController : wire MVC
SudokuCli "1" --> "1" SudokuModel : reuse same model

note right of SudokuController
  Controller contains no Swing rendering code.
  It validates requests and coordinates model/view.
end note

note right of Model
  Model contains Sudoku rules, puzzle loading,
  flags, undo, hint, completion, and asserts.
  It contains no GUI code.
end note

@enduml
